refactoring subscription endpoint & patient sub req
